# csv-processor

./: .gitignore  CMakeLists.txt
src/: csv_processor.cpp  csv_processor.h  empty_column_finder.cpp  empty_column_finder.h  file_stripper.cpp  file_stripper.h  utils.cpp  utils.h
test/: csv_processor_strip_columns.cpp  empty_column_finder_test.cpp  file_stripper_test.cpp
test/resources/: all_populated.csv  both_cols_populated.csv  only_11_cols_populated.csv  only_14_cols_populated.csv  simple.csv  test1.csv  three_cols.csv
